syntax = "proto3";

package api;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/zasuchilas/gophkeeper/pkg/secretsv1;secretsv1";

service SecretsV1 {
  rpc List(ListSecretsRequest) returns (ListSecretsResponse);
  rpc Get(SecretRequest) returns (GetSecretResponse);
  rpc Create(CreateSecretRequest) returns (CreateSecretResponse);
  rpc Update(UpdateSecretRequest) returns (UpdateSecretResponse);
  rpc Delete(SecretRequest) returns (google.protobuf.Empty);
}

enum SecretType {
  UNKNOWN = 0;
  LOGO_PASS = 1;
  TEXT = 2;
  BINARY = 3;
  BANK_CARD = 4;
}

message ListSecretsRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message ListSecretsResponse {
  message Item {
    google.protobuf.Timestamp updated_at = 1;
    string fake_name = 2;
    int64 size = 3;
    SecretType secret_type = 4;
  }
  repeated Item items = 1;
}

message SecretRequest {
  int64 id = 1;
}

message GetSecretResponse {
  google.protobuf.Timestamp updated_at = 1;
  string fake_name = 2;
  int64 size = 3;
  SecretType secret_type = 4;
  bytes data = 5;
}

message CreateSecretRequest {
  string fake_name = 1;
  bytes data = 2;
  SecretType secret_type = 3;
}

message CreateSecretResponse {
  int64 id = 1;
  string fake_name = 2;
  int64 size = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message UpdateSecretRequest {
  string fake_name = 1;
  bytes data = 2;
  SecretType secret_type = 3;
}

message UpdateSecretResponse {
  int64 id = 1;
  string fake_name = 2;
  int64 size = 3;
  google.protobuf.Timestamp updated_at = 4;
}
