syntax = "proto3";

package api;

option go_package = "github.com/zasuchilas/gophkeeper/pkg/userv1;userv1";

service UserV1 {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message RegisterResponse {
  string jwt = 1;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string jwt = 1;
}
